--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "db:up": "drizzle-kit up"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.24.0",
+    "@clerk/themes": "^2.2.55",
     "@e2b/code-interpreter": "^1.5.1",
     "@hookform/resolvers": "^5.1.1",
     "@inngest/agent-kit": "^0.9.0",
