--- a/package.json
+++ b/package.json
@@ -9,16 +9,7 @@
     "prepare": "husky",
     "lint": "biome lint --write",
     "format": "biome check --write",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:reset": "bun ./src/database/scripts/admin/reset-database.ts",
-    "db:seed": "bun ./src/database/scripts/seed/index.ts",
-    "db:studio": "drizzle-kit studio",
-    "db:pull": "drizzle-kit pull",
-    "db:export": "drizzle-kit export",
-    "db:check": "drizzle-kit check",
-    "db:up": "drizzle-kit up"
+    "db:migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
@@ -27,6 +18,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@inngest/agent-kit": "^0.9.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@prisma/client": "^6.11.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -63,7 +55,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "^8.6.0",
     "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
@@ -85,6 +76,7 @@
     "sonner": "^2.0.6",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
+    "tsx": "^4.20.3",
     "vaul": "^1.1.2",
     "zod": "^3.25.75"
   },
@@ -96,9 +88,9 @@
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "prisma": "^6.11.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
