--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepare": "husky",
     "lint": "biome lint --write",
     "format": "biome check --write",
-    "db:migrate": "prisma migrate dev"
+    "db:migrate": "prisma migrate dev",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
