--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@e2b/code-interpreter": "^1.5.1",
     "@hookform/resolvers": "^5.1.1",
     "@inngest/agent-kit": "^0.9.0",
+    "@opentelemetry/winston-transport": "^0.14.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-accordion": "^1.2.11",
